Package_Tools/include-C/suitesparse/SuiteSparse_config.pp

(* Const before type ignored *)
procedure SUITESPARSE_BLAS_ZHERK(uplo:Pchar; trans:Pchar; n:PSUITESPARSE_BLAS_INT; k:PSUITESPARSE_BLAS_INT; alpha:pointer; 
            A:pointer; lda:PSUITESPARSE_BLAS_INT; beta:pointer; C:pointer; ldc:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_CHERK(uplo:Pchar; trans:Pchar; n:PSUITESPARSE_BLAS_INT; k:PSUITESPARSE_BLAS_INT; alpha:pointer; 
            A:pointer; lda:PSUITESPARSE_BLAS_INT; beta:pointer; C:pointer; ldc:PSUITESPARSE_BLAS_INT);cdecl;external;
{------------------------------------------------------------------------------ }
{ potrf: Cholesky factorization }
{------------------------------------------------------------------------------ }
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
{ output: }
procedure SUITESPARSE_LAPACK_DPOTRF(uplo:Pchar; n:PSUITESPARSE_BLAS_INT; A:Pdouble; lda:PSUITESPARSE_BLAS_INT; info:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
{ output: }
procedure SUITESPARSE_LAPACK_SPOTRF(uplo:Pchar; n:PSUITESPARSE_BLAS_INT; A:Psingle; lda:PSUITESPARSE_BLAS_INT; info:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
{ output: }
procedure SUITESPARSE_LAPACK_ZPOTRF(uplo:Pchar; n:PSUITESPARSE_BLAS_INT; A:pointer; lda:PSUITESPARSE_BLAS_INT; info:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
{ output: }
procedure SUITESPARSE_LAPACK_CPOTRF(uplo:Pchar; n:PSUITESPARSE_BLAS_INT; A:pointer; lda:PSUITESPARSE_BLAS_INT; info:PSUITESPARSE_BLAS_INT);cdecl;external;
{------------------------------------------------------------------------------ }
{ scal: Y = alpha*Y }
{------------------------------------------------------------------------------ }
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_DSCAL(n:PSUITESPARSE_BLAS_INT; alpha:Pdouble; Y:Pdouble; incy:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_SSCAL(n:PSUITESPARSE_BLAS_INT; alpha:Psingle; Y:Psingle; incy:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_ZSCAL(n:PSUITESPARSE_BLAS_INT; alpha:pointer; Y:pointer; incy:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_CSCAL(n:PSUITESPARSE_BLAS_INT; alpha:pointer; Y:pointer; incy:PSUITESPARSE_BLAS_INT);cdecl;external;
{------------------------------------------------------------------------------ }
{ ger/geru: A = alpha*x*y' + A }
{------------------------------------------------------------------------------ }
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_DGER(m:PSUITESPARSE_BLAS_INT; n:PSUITESPARSE_BLAS_INT; alpha:Pdouble; X:Pdouble; incx:PSUITESPARSE_BLAS_INT; 
            Y:Pdouble; incy:PSUITESPARSE_BLAS_INT; A:Pdouble; lda:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_SGER(m:PSUITESPARSE_BLAS_INT; n:PSUITESPARSE_BLAS_INT; alpha:Psingle; X:Psingle; incx:PSUITESPARSE_BLAS_INT; 
            Y:Psingle; incy:PSUITESPARSE_BLAS_INT; A:Psingle; lda:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_ZGERU(m:PSUITESPARSE_BLAS_INT; n:PSUITESPARSE_BLAS_INT; alpha:pointer; X:pointer; incx:PSUITESPARSE_BLAS_INT; 
            Y:pointer; incy:PSUITESPARSE_BLAS_INT; A:pointer; lda:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_CGERU(m:PSUITESPARSE_BLAS_INT; n:PSUITESPARSE_BLAS_INT; alpha:pointer; X:pointer; incx:PSUITESPARSE_BLAS_INT; 
            Y:pointer; incy:PSUITESPARSE_BLAS_INT; A:pointer; lda:PSUITESPARSE_BLAS_INT);cdecl;external;
{------------------------------------------------------------------------------ }
{ larft: T = block Householder factor }
{------------------------------------------------------------------------------ }
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_LAPACK_DLARFT(direct:Pchar; storev:Pchar; n:PSUITESPARSE_BLAS_INT; k:PSUITESPARSE_BLAS_INT; V:Pdouble; 
            ldv:PSUITESPARSE_BLAS_INT; Tau:Pdouble; T:Pdouble; ldt:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_LAPACK_SLARFT(direct:Pchar; storev:Pchar; n:PSUITESPARSE_BLAS_INT; k:PSUITESPARSE_BLAS_INT; V:Psingle; 
            ldv:PSUITESPARSE_BLAS_INT; Tau:Psingle; T:Psingle; ldt:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_LAPACK_ZLARFT(direct:Pchar; storev:Pchar; n:PSUITESPARSE_BLAS_INT; k:PSUITESPARSE_BLAS_INT; V:pointer; 
            ldv:PSUITESPARSE_BLAS_INT; Tau:pointer; T:pointer; ldt:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_LAPACK_CLARFT(direct:Pchar; storev:Pchar; n:PSUITESPARSE_BLAS_INT; k:PSUITESPARSE_BLAS_INT; V:pointer; 
            ldv:PSUITESPARSE_BLAS_INT; Tau:pointer; T:pointer; ldt:PSUITESPARSE_BLAS_INT);cdecl;external;
{------------------------------------------------------------------------------ }
{ larfb: apply block Householder reflector }
{------------------------------------------------------------------------------ }
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
{ workspace: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_LAPACK_DLARFB(side:Pchar; trans:Pchar; direct:Pchar; storev:Pchar; m:PSUITESPARSE_BLAS_INT; 
            n:PSUITESPARSE_BLAS_INT; k:PSUITESPARSE_BLAS_INT; V:Pdouble; ldv:PSUITESPARSE_BLAS_INT; T:Pdouble; 
            ldt:PSUITESPARSE_BLAS_INT; C:Pdouble; ldc:PSUITESPARSE_BLAS_INT; Work:Pdouble; ldwork:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
{ workspace: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_LAPACK_SLARFB(side:Pchar; trans:Pchar; direct:Pchar; storev:Pchar; m:PSUITESPARSE_BLAS_INT; 
            n:PSUITESPARSE_BLAS_INT; k:PSUITESPARSE_BLAS_INT; V:Psingle; ldv:PSUITESPARSE_BLAS_INT; T:Psingle; 
            ldt:PSUITESPARSE_BLAS_INT; C:Psingle; ldc:PSUITESPARSE_BLAS_INT; Work:Psingle; ldwork:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
{ workspace: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_LAPACK_ZLARFB(side:Pchar; trans:Pchar; direct:Pchar; storev:Pchar; m:PSUITESPARSE_BLAS_INT; 
            n:PSUITESPARSE_BLAS_INT; k:PSUITESPARSE_BLAS_INT; V:pointer; ldv:PSUITESPARSE_BLAS_INT; T:pointer; 
            ldt:PSUITESPARSE_BLAS_INT; C:pointer; ldc:PSUITESPARSE_BLAS_INT; Work:pointer; ldwork:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
{ workspace: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_LAPACK_CLARFB(side:Pchar; trans:Pchar; direct:Pchar; storev:Pchar; m:PSUITESPARSE_BLAS_INT; 
            n:PSUITESPARSE_BLAS_INT; k:PSUITESPARSE_BLAS_INT; V:pointer; ldv:PSUITESPARSE_BLAS_INT; T:pointer; 
            ldt:PSUITESPARSE_BLAS_INT; C:pointer; ldc:PSUITESPARSE_BLAS_INT; Work:pointer; ldwork:PSUITESPARSE_BLAS_INT);cdecl;external;
{------------------------------------------------------------------------------ }
{ nrm2: vector 2-norm }
{------------------------------------------------------------------------------ }
{ input: }
